# Data_Wrangling_With_DuckDB

./: .gitignore  README.md  Trees.R  benchmark_global_temp_averages.R  benchmark_global_temp_ids.R  global_temp.R  pyproject.toml  requirements.txt
PyDataVA25/: Benchmarking.py  DuckDB_Demos.ipynb
RGOV24/: Benchmarking.R  Trees.R  benchmark_glcp_csv.R  benchmark_global_temp_averages.R
RGOV24/slides/: RGOV24.html  RGOV24.qmd
slides/: RGOV24.html  RGOV24.qmd
