[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"

[project]
name = "duckdb-project"
version = "0.1.0"
description = "DuckDB project with language server support"
requires-python = ">=3.8"
dependencies = [
    "duckdb>=0.9.2",
    "pandas>=2.0.0",
    "types-duckdb",  # Type stubs for DuckDB
] 